# AecmDemo

./: README.md  settings.gradle
aecm/: CMakeLists.txt  build.gradle
aecm/src/androidTest/java/com/example/aecm/: ExampleInstrumentedTest.java
aecm/src/test/java/com/example/aecm/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/example/aecmdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/aecmdemo/: AudioRecordManager.java  AudioTrackManager.java  MainActivity.java  PermissionUtil.java  VoicePlayer.java  VoiceRecorder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/aecmdemo/: ExampleUnitTest.java
audio/: mic.pcm
gradle/wrapper/: gradle-wrapper.properties
